Змінив логотип з картинки на слова

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--header-->
     <header>
         <nav>
-            <a href=""><img src="./img/webstudio.jpg" alt="лого" width="145"></a>
+            <a href="">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -58,7 +58,7 @@
     </main>
     <!--footer-->
     <footer>
-        <a href=""><img src="./img/webstudio.jpg" alt="лого" width="145"></a>
+        <a href="">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
             <li><a href="mailto:info@example.com">info@example.com</a></li>
