адреса тепер відкривається у новій вкладці

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/dWY4cg4Rnmq4vtrc8"
+            <a href="https://goo.gl/maps/dWY4cg4Rnmq4vtrc8" target="_blank"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
